<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#182E55"
    tools:context=".views.TransactionActivity">

    <TextView
        android:id="@+id/related_transactions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/total_related_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_transactions"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/total_amount_related_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_total"
        android:layout_gravity="center_horizontal"
        android:textColor="#182E55"
        android:textSize="15dp"
        android:background="#FFFFFF"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/related_transactions_recylcer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>